# bio-hist

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bio-bin.sublime-workspace  config.yaml  std-config.yaml
include/: BinSignalGenerator.h  BinWordsSignalGenerator.h  BitsObserver.h  DowncrossSpikeDetector.h  ErrorFilter.h  FormSpikeDetector.h  HDF5HistWriter.h  HDF5TransitionsWriter.h  ProblemConfig.h  ProblemInfo.h  SignalProcessor.h  SpikeDetector.h  SpikesObserver.h  Transitions.h  UpcrossSpikeDetector.h  WordHistGenerator.h  WordsObserver.h  common.h  pezHist.h  transitionMatrix.h
libStats/: Statistics.cpp
src/: BitsObserver.cpp  CMakeLists.txt  ErrorFilter.cpp  HDF5HistWriter.cpp  ProblemConfig.cpp  SignalProcessor.cpp  SignalProcessor.cpp~  SpikesObserver.cpp  bio-hist.cpp  bio-transitions.cpp  cmake_install.cmake  entropyTempCalc.cpp  pezHist.cpp  transitionMatrix.cpp
test/: CMakeLists.txt  hello_test.cpp
wordsBuffer/: CMakeLists.txt  wordsBuffer.c  wordsBuffer.h
